# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-11-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cowboy to 0.9.0
    * Fix some type errors
    * Fix cloudi_runtime_testing random usage

2013-11-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_handle_info/3 exception stacktrace logging
    * Fix cloudi_service_map_reduce resend on first few messages

2013-11-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make sure the cloudi module has all the types
    * Update cpg
    * Add the CloudI Service API function service_subscriptions/2

2013-11-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add default cloudi_core configuration

2013-11-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add automatic handling of the lazy destination refresh method
      cpg messages within the cloudi module (using
      the cloudi:destinations_refresh/2 function is still the best way
      of having recent service name destination data)

2013-10-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the cloudi_x_ scope script operation for source code repo updates
      within a built repository
    * Update reltool_util and uuid

2013-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi:mcast_async function call
    * Update cpg
    * Fix shutdown issue with service restarts and cloudi_pool errors
    * Add the automatic_loading service configuration option so the
      automatic loading used for internal services can be turned off

2013-10-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a potential inconsistency between the CloudI repo and the
      cloudi_core repo (with CLOUDI_CORE_STANDALONE defined) by changing the
      {cpg_data, Groups} message in cpg to {cloudi_cpg_data, Groups}
    * Add proplist service configuration format

2013-10-22 Michael Truog   <mjtruog [at] gmail (dot) com>
