@@ -46,25 +46,6 @@
         cloudi_services_monitor
         ]},
    {included_applications, [
-        cloudi_service_api_requests,
-        cloudi_service_db,
-        cloudi_service_db_cassandra,
-        cloudi_service_db_couchdb,
-        cloudi_service_db_elasticsearch,
-        cloudi_service_db_memcached,
-        cloudi_service_db_mysql,
-        cloudi_service_db_pgsql,
-        cloudi_service_db_tokyotyrant,
-        cloudi_service_filesystem,
-        cloudi_service_http_cowboy,
-        cloudi_service_http_elli,
-        cloudi_service_map_reduce,
-        cloudi_service_quorum,
-        cloudi_service_tcp,
-        cloudi_service_timers,
-        cloudi_service_udp,
-        cloudi_service_work_manager,
-        cloudi_service_zeromq,
         cloudi_x_combonodefinder,
         cloudi_x_ec2nodefinder,
         cloudi_x_nodefinder
