@@ -29,6 +29,47 @@
   {app, cloudi_core,
    [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
 
+  % CloudI services, not automatically started
+  % (i.e., started by the internal service configuration entries)
+  {app, cloudi_service_api_requests,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_cassandra,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_couchdb,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_elasticsearch,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_memcached,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_mysql,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_pgsql,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_db_tokyotyrant,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_filesystem,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_http_cowboy,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_http_elli,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_map_reduce,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_quorum,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_tcp,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_timers,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_udp,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_work_manager,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+  {app, cloudi_service_zeromq,
+   [{incl_cond, include}, {mod_cond, all}, {app_file, keep}]},
+
   % application directories
   {lib_dirs,
    [
