@@ -6,6 +6,8 @@
     * Update cowboy to 0.9.0
     * Fix some type errors
     * Fix cloudi_runtime_testing random usage
+    * Fix the CloudI release so no included CloudI services
+      have their Erlang application dependencies started automatically
 
 2013-11-09 Michael Truog   <mjtruog [at] gmail (dot) com>
 
